<resources>
    <string name="app_name">Instagram Photo Viewer</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">user name</string>
    <string name="image_caption">image caption</string>
    <string name="like_count">like count</string>
    <string name="all_comments">all comments</string>
    <string name="comment1">comment1</string>
    <string name="author1">author1</string>
    <string name="time_stamp">time stamp</string>
    <string name="author_name">author name</string>
    <string name="comment_content">comment content</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
